[gd_scene load_steps=9 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2MeanBabyTransparent.png" type="Texture" id=1]
[ext_resource path="res://Babies/MeanBaby.gd" type="Script" id=2]
[ext_resource path="res://Weapons/BigShot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/Sword.tscn" type="PackedScene" id=4]
[ext_resource path="res://Weapons/BabyTech30X.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Stationary"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5, 35.5 )

[node name="MeanBaby" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12, 24, 12, 24, 8, -16, 0, -24, -8, -16 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="TopHand" type="Sprite" parent="."]
position = Vector2( 0, -14 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="BigShot" parent="TopHand" instance=ExtResource( 3 )]

[node name="BabyTech30X" parent="TopHand" instance=ExtResource( 5 )]
position = Vector2( 0, -2 )

[node name="Sword" parent="TopHand" instance=ExtResource( 4 )]
show_behind_parent = true
position = Vector2( 9.5, -2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stationary"
anims/Stationary = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -10.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="TopHand/Sword/Area2D" to="." method="_on_Sword_body_entered"]
[connection signal="timeout" from="TopHand/Sword/Timer" to="." method="_on_SwordTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="TopHand/Sword"]
